[package]
name = "solana_http_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"  # Web framework
actix-cors = "0.6"  # CORS support
serde = { version = "1.0", features = ["derive"] }  # Serialization/deserialization
serde_json = "1.0"  # JSON handling
solana-sdk = "1.14"  # Solana SDK
spl-token = { version = "3.5", features = ["no-entrypoint"] }  # SPL Token support
bs58 = "0.4"  # Base58 encoding
base64 = "0.13"  # Base64 encoding
anyhow = "1.0"  # Error handling
thiserror = "1.0"  # Custom error types
validator = { version = "0.16", features = ["derive"] }
log = "0.4"  # Logging
env_logger = "0.10"  # Logger implementation
actix-governor = "0.5"
ammonia = "3.3"

