[package]
name = "solana_http_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
base64 = "0.22"
bs58 = "0.5"
ed25519-dalek = "1.0.1"
spl-token = "3.5.0"
spl-associated-token-account = "1.1.3"
solana-sdk = "1.18.26"
